--- a/public/style.css
+++ b/public/style.css
@@ -1,17 +1,15 @@
-/****** Main Styling ******/
-
 body {
-	font-family: 'Roboto', sans-serif;
-	font-size: 16px;
-	color: #222;
-	background-color: #FaFaFa;
-	text-align: center;
-	line-height: 1.4em;
+  text-align: center;
+  background-image: url("./images/underwater2.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  font-weight: bold;
 }
 
 .container {
-	padding: 0;
-	margin-top: 40px;
+  padding: 0;
+  margin-top: 40px;
 }
 
 h3 {
@@ -19,26 +17,20 @@ h3 {
 }
 
 .footer {
-	margin-top: 40px;
+  margin-top: 40px;
 }
 
-.user-stories {
-  position: relative;
-  text-align: justify;
-  max-width: 700px;
-  margin: 15px auto;
-}
 code {
   font-family: monospace;
   padding: 2px;
-  color: black;
-  background-color: #fff;
+  color: white;
+  background-color: rgba(34, 135, 165, 0.411);
 }
 ol {
-	list-style-position: inside;
+  list-style-position: inside;
 }
 ul {
-	list-style-type: none;
+  list-style-type: none;
 }
 
 li {
@@ -49,7 +41,7 @@ li {
 }
 
 a {
-	color: #2574A9;
+  color: purple;
 }
 
 form {
@@ -58,17 +50,5 @@ form {
   margin: 10px auto;
   padding: 20px;
   max-width: 600px;
-}
-
-label {
-  margin-right: 10px;
-}
-
-input {
-  padding: 5px;
-}
-
-input[type=text] {
-  width: 220px;
-  text-align: center;
+  background-color: rgba(34, 135, 165, 0.411);
 }
